--- a/index.html
+++ b/index.html
@@ -1,65 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Cardinal Transportation Client Portal</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f8f8f8; }
-    .header { background: #b22222; color: #fff; padding: 20px 0; text-align: center; }
-    .logo { max-width: 120px; margin-bottom: 10px; }
-    .container { max-width: 700px; margin: 30px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 8px #ccc; }
-    h1 { margin-top: 0; }
-    .section { margin-bottom: 30px; }
-    ul { list-style: none; padding: 0; }
-    li { margin: 15px 0; }
-    .download-btn { background: #b22222; color: #fff; padding: 8px 16px; border: none; border-radius: 4px; text-decoration: none; font-weight: bold; }
-    .download-btn:hover { background: #8b1a1a; }
-    .contact { background: #f2f2f2; padding: 15px; border-radius: 6px; }
-    @media (max-width: 600px) {
-      .container { padding: 15px; }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Cardinal Transportation Client Portal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; background: #f8f8f8; }
+        .header { background: #b22222; color: #fff; padding: 20px 0; text-align: center; }
+        .logo { max-width: 120px; margin-bottom: 10px; }
+        .container { max-width: 700px; margin: 30px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+        h1 { margin-top: 0; }
+        .section { margin-bottom: 30px; }
+        ul { list-style: none; padding: 0; }
+        li { margin: 15px 0; }
+        .download-btn { background: #b22222; color: #fff; padding: 8px 16px; border: none; border-radius: 4px; text-decoration: none; display: inline-block; cursor: pointer; }
+        .download-btn:hover { background: #8b1a1a; }
+        .contact { background: #f2f2f2; padding: 15px; border-radius: 6px; }
+        @media (max-width: 600px) {
+            .container { padding: 15px; }
+        }
+    </style>
 </head>
 <body>
-  <div class="header">
-    <!-- Replace with your logo file path -->
-    <img src="logo.png" alt="Cardinal Transportation Logo" class="logo">
-    <h1>Client Portal</h1>
-  </div>
-  <div class="container">
-    <div class="section">
-      <h2>Documents</h2>
-      <ul>
-        <li>
-          <span>Client 1 Report</span>
-          <a href="docs/client1-report.pdf" class="download-btn" download>Download</a>
-        </li>
-        <li>
-          <span>Client 2 Invoice</span>
-          <a href="docs/client2-invoice.pdf" class="download-btn" download>Download</a>
-        </li>
-        <!-- Add more documents as needed -->
-      </ul>
+    <div class="header">
+        <!-- Replace with your logo file path -->
+        <img src="logo.png" alt="Cardinal Transportation Logo" class="logo">
+        <h1>Client Portal</h1>
     </div>
-    <div class="section">
-      <h2>Announcements</h2>
-      <ul>
-        <li>December 2025: Portal launched for client access!</li>
-        <!-- Add more announcements -->
-      </ul>
+    <div class="container">
+        <div class="section">
+            <h2>Documents</h2>
+            <ul>
+                <li>
+                    <span>Client A - Monthly Report</span>
+                    <a href="docs/Client-A-Monthly-Report.md" class="download-btn" download>Download</a>
+                </li>
+                <li>
+                    <span>Client B - Quarterly Invoice</span>
+                    <a href="docs/Client-B-Quarterly-Invoice.md" class="download-btn" download>Download</a>
+                </li>
+                <!-- Add more documents as needed -->
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Announcements</h2>
+            <p>Welcome to the Cardinal Transportation Client Portal. Access your important documents here.</p>
+        </div>
+        <div class="section contact">
+            <h2>Contact Us</h2>
+            <p>For questions or assistance, please contact:<br>
+            Email: support@cardinaltransportation.com<br>
+            Phone: (555) 123-4567</p>
+        </div>
     </div>
-    <div class="section contact">
-      <h2>Contact Support</h2>
-      <form action="https://formspree.io/f/your-form-id" method="POST">
-        <label for="email">Your Email:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="3" required></textarea><br>
-        <button type="submit" class="download-btn">Send</button>
-      </form>
-      <p>Or email us at <a href="mailto:support@cardinaltransport.com">support@cardinaltransport.com</a></p>
-    </div>
-  </div>
 </body>
 </html>
