--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-27 WPR</div>
-                            <a href="docs/WPR's/2025-06-27_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="docs/WPR's/2025-06-27 _WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
@@ -260,8 +260,128 @@
                 <button class="accordion-btn">Buckeye</button>
                 <div class="accordion-content">
                     <div class="wpr-grid">
-                        <!-- Buckeye documents will be added here when requested -->
+</div>
+            </div>
+            <div class="accordion" style="margin-top:18px">
+                <button class="accordion-btn" style="background:#8b1a1a">Deal Documents</button>
+                <div class="accordion-content">
+                    <div class="wpr-grid">
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">Real Rstate Purchase Contract Cardinal Buckeye.pdf</div>
+                            <a href="docs/Buckeye/Deal Documents/Real Rstate Purchase Contract Cardinal Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">Purchase Agreement Cardinal Buckeye.pdf</div>
+                            <a href="docs/Buckeye/Deal Documents/Purchase Agreement Cardinal Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Xls_icon.png" alt="Excel" class="wpr-icon" />
+                            <div class="wpr-title">BUCKEYE5.2mm.xlsx</div>
+                            <a href="docs/Buckeye/Deal Documents/BUCKEYE5.2mm.xlsx" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">Appraisal.pdf</div>
+                            <a href="docs/Buckeye/Deal Documents/Appraisal.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">5millionNon-Binding Term SheetElliott Created.pdf</div>
+                            <a href="docs/Buckeye/Deal Documents/5millionNon-Binding Term SheetElliott Created.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
                     </div>
+                </div>
+            </div>
+            <div class="accordion" style="margin-top:18px">
+                <button class="accordion-btn" style="background:#8b1a1a">Insights</button>
+                <div class="accordion-content">
+                    <div class="wpr-grid">
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">Narrative from Meeting with Buckeye Charter Owners.pdf</div>
+                            <a href="docs/Buckeye/Insights/Narrative from Meeting with Buckeye Charter Owners.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                        <div class="wpr-tile">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
+                            <div class="wpr-title">Key Information from Meeting with Buckeye Charter Owners.pdf</div>
+                            <a href="docs/Buckeye/Insights/Key Information from Meeting with Buckeye Charter Owners.pdf" class="wpr-link" target="_blank">View/Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion" style="margin-top:18px">
+                <button class="accordion-btn" style="background:#8b1a1a">Photos</button>
+                <div class="accordion-content">
+                    <div class="wpr-grid">
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173940.jpg" alt="20250625173940.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173940.jpg</div><a href="docs/Buckeye/Photos/20250625173940.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173913.jpg" alt="20250625173913.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173913.jpg</div><a href="docs/Buckeye/Photos/20250625173913.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625174007.jpg" alt="20250625174007.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625174007.jpg</div><a href="docs/Buckeye/Photos/20250625174007.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173857.jpg" alt="20250625173857.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173857.jpg</div><a href="docs/Buckeye/Photos/20250625173857.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625174052.jpg" alt="20250625174052.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625174052.jpg</div><a href="docs/Buckeye/Photos/20250625174052.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173838.jpg" alt="20250625173838.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173838.jpg</div><a href="docs/Buckeye/Photos/20250625173838.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173815.jpg" alt="20250625173815.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173815.jpg</div><a href="docs/Buckeye/Photos/20250625173815.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173752.jpg" alt="20250625173752.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173752.jpg</div><a href="docs/Buckeye/Photos/20250625173752.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173724.jpg" alt="20250625173724.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173724.jpg</div><a href="docs/Buckeye/Photos/20250625173724.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173707.jpg" alt="20250625173707.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173707.jpg</div><a href="docs/Buckeye/Photos/20250625173707.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173646.jpg" alt="20250625173646.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173646.jpg</div><a href="docs/Buckeye/Photos/20250625173646.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173641.jpg" alt="20250625173641.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173641.jpg</div><a href="docs/Buckeye/Photos/20250625173641.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173543.jpg" alt="20250625173543.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173543.jpg</div><a href="docs/Buckeye/Photos/20250625173543.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625174112.jpg" alt="20250625174112.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625174112.jpg</div><a href="docs/Buckeye/Photos/20250625174112.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173457.jpg" alt="20250625173457.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173457.jpg</div><a href="docs/Buckeye/Photos/20250625173457.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173442.jpg" alt="20250625173442.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173442.jpg</div><a href="docs/Buckeye/Photos/20250625173442.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173402.jpg" alt="20250625173402.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173402.jpg</div><a href="docs/Buckeye/Photos/20250625173402.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625174135.jpg" alt="20250625174135.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625174135.jpg</div><a href="docs/Buckeye/Photos/20250625174135.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173343.jpg" alt="20250625173343.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173343.jpg</div><a href="docs/Buckeye/Photos/20250625173343.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173323.jpg" alt="20250625173323.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173323.jpg</div><a href="docs/Buckeye/Photos/20250625173323.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173256.jpg" alt="20250625173256.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173256.jpg</div><a href="docs/Buckeye/Photos/20250625173256.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173211.jpg" alt="20250625173211.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173211.jpg</div><a href="docs/Buckeye/Photos/20250625173211.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173152.jpg" alt="20250625173152.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173152.jpg</div><a href="docs/Buckeye/Photos/20250625173152.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173125.jpg" alt="20250625173125.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173125.jpg</div><a href="docs/Buckeye/Photos/20250625173125.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173100.jpg" alt="20250625173100.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173100.jpg</div><a href="docs/Buckeye/Photos/20250625173100.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173051.jpg" alt="20250625173051.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173051.jpg</div><a href="docs/Buckeye/Photos/20250625173051.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625174148.jpg" alt="20250625174148.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625174148.jpg</div><a href="docs/Buckeye/Photos/20250625174148.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625173002.jpg" alt="20250625173002.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625173002.jpg</div><a href="docs/Buckeye/Photos/20250625173002.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625172911.jpg" alt="20250625172911.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625172911.jpg</div><a href="docs/Buckeye/Photos/20250625172911.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                        <div class="wpr-tile"><img src="docs/Buckeye/Photos/20250625172853.jpg" alt="20250625172853.jpg" class="wpr-icon" style="object-fit:cover"><div class="wpr-title">20250625172853.jpg</div><a href="docs/Buckeye/Photos/20250625172853.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                    </div>
+                </div>
+            </div>
+                    <!-- Modal for image pop-up -->
+    <div id="image-modal" style="display:none;position:fixed;z-index:9999;left:0;top:0;width:100vw;height:100vh;background:rgba(0,0,0,0.7);align-items:center;justify-content:center">
+        <span id="modal-close" style="position:absolute;top:32px;right:48px;font-size:2.5rem;color:#fff;cursor:pointer;font-weight:bold">&times;</span>
+        <img id="modal-img" src="" alt="Photo" style="max-width:90vw;max-height:80vh;border-radius:12px;box-shadow:0 4px 32px #b2222280;display:block;margin:auto" />
+    </div>
+    <script>
+    // Modal functionality for Photos tab
+    var modal = document.getElementById('image-modal');
+    var modalImg = document.getElementById('modal-img');
+    var modalClose = document.getElementById('modal-close');
+    // Only target photo tiles
+    document.querySelectorAll('.accordion-content .wpr-grid .wpr-tile img').forEach(function(img) {
+        // Only add to images in Photos tab
+        if (img.parentElement.parentElement.parentElement.previousElementSibling &&
+            img.parentElement.parentElement.parentElement.previousElementSibling.textContent.includes('Photos')) {
+            img.style.cursor = 'zoom-in';
+            img.addEventListener('click', function(e) {
+                modal.style.display = 'flex';
+                modalImg.src = img.src;
+                modalImg.alt = img.alt;
+            });
+        }
+    });
+    modalClose.addEventListener('click', function() {
+        modal.style.display = 'none';
+        modalImg.src = '';
+    });
+    modal.addEventListener('click', function(e) {
+        if (e.target === modal) {
+            modal.style.display = 'none';
+            modalImg.src = '';
+        }
+    });
+    </script>                    </div>
                 </div>
             </div>
         </div>
