Update PDF links to point to GitHub repository

--- a/index.html
+++ b/index.html
@@ -195,62 +195,62 @@
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-04 WPR</div>
-                            <a href="docs/docs/WPR's/2025-06-04_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-06-04_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-13 WPR</div>
-                            <a href="docs/docs/WPR's/2025-06-13_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-06-13_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-20 WPR</div>
-                            <a href="docs/docs/WPR's/2025-06-20_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-06-20_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-06-27 WPR</div>
-                            <a href="docs/docs/WPR's/2025-06-27 _WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-06-27 _WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-07-11 WPR</div>
-                            <a href="docs/docs/WPR's/2025-07-11_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-07-11_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-08-01 WPR</div>
-                            <a href="docs/docs/WPR's/2025-08-01_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-08-01_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-08-22 WPR</div>
-                            <a href="docs/docs/WPR's/2025-08-22_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-08-22_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-09-19 WPR</div>
-                            <a href="docs/docs/WPR's/2025-09-19_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-09-19_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-10-03 WPR</div>
-                            <a href="docs/docs/WPR's/2025-10-03_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-10-03_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-10-17 WPR</div>
-                            <a href="docs/docs/WPR's/2025-10-17_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-10-17_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-10-24 WPR</div>
-                            <a href="docs/docs/WPR's/2025-10-24_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-10-24_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                         <div class="wpr-tile">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                             <div class="wpr-title">2025-11-21 WPR</div>
-                            <a href="docs/docs/WPR's/2025-11-21_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
+                            <a href="https://github.com/your-github-username/your-repo/raw/main/docs/WPR's/2025-11-21_WPR.pdf" class="wpr-link" target="_blank">View/Download</a>
                         </div>
                     </div>
                 </div>
@@ -268,27 +268,27 @@
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                                     <div class="wpr-title">Real Rstate Purchase Contract Cardinal Buckeye.pdf</div>
-                                    <a href="docs/docs/Buckeye/Deal Documents/Real Rstate Purchase Contract Cardinal Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <a href="https://github.com/your-github-username/your-repo/raw/main/docs/Buckeye/Deal Documents/Real Rstate Purchase Contract Cardinal Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                                     <div class="wpr-title">Purchase Agreement Cardinal Buckeye.pdf</div>
-                                    <a href="docs/docs/Buckeye/Deal Documents/Purchase Agreement Cardinal Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <a href="https://github.com/your-github-username/your-repo/raw/main/docs/Buckeye/Deal Documents/Purchase Agreement Cardinal Buckeye.pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Xls_icon.png" alt="Excel" class="wpr-icon" />
                                     <div class="wpr-title">BUCKEYE$5.2mm.xlsx</div>
-                                    <a href="docs/docs/Buckeye/Deal Documents/BUCKEYE$5.2mm.xlsx" class="wpr-link" target="_blank">View/Download</a>
+                                    <a href="https://github.com/your-github-username/your-repo/raw/main/docs/Buckeye/Deal Documents/BUCKEYE$5.2mm.xlsx" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                                     <div class="wpr-title">Appraisal.pdf</div>
-                                    <a href="docs/docs/Buckeye/Deal Documents/Appraisal.pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <a href="https://github.com/your-github-username/your-repo/raw/main/docs/Buckeye/Deal Documents/Appraisal.pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                                     <div class="wpr-title">$5million_Non-Binding Term Sheet(Elliott Created).pdf</div>
-                                    <a href="docs/docs/Buckeye/Deal Documents/$5million_Non-Binding Term Sheet(Elliott Created).pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <a href="https://github.com/your-github-username/your-repo/raw/main/docs/Buckeye/Deal Documents/$5million_Non-Binding Term Sheet(Elliott Created).pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                             </div>
                         </div>
@@ -300,12 +300,12 @@
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                                     <div class="wpr-title">Narrative from Meeting with Buckeye Charter Owners.pdf</div>
-                                    <a href="docs/docs/Buckeye/Insights/Narrative from Meeting with Buckeye Charter Owners.pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <a href="https://github.com/your-github-username/your-repo/raw/main/docs/Buckeye/Insights/Narrative from Meeting with Buckeye Charter Owners.pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                                 <div class="wpr-tile">
                                     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/PDF_file_icon.svg" alt="PDF" class="wpr-icon" />
                                     <div class="wpr-title">Key Information from Meeting with Buckeye Charter Owners.pdf</div>
-                                    <a href="docs/docs/Buckeye/Insights/Key Information from Meeting with Buckeye Charter Owners.pdf" class="wpr-link" target="_blank">View/Download</a>
+                                    <a href="https://github.com/your-github-username/your-repo/raw/main/docs/Buckeye/Insights/Key Information from Meeting with Buckeye Charter Owners.pdf" class="wpr-link" target="_blank">View/Download</a>
                                 </div>
                             </div>
                         </div>
@@ -314,11 +314,11 @@
                         <button class="accordion-btn" style="background:#8b1a1a;">Photos</button>
                         <div class="accordion-content">
                             <div class="wpr-grid">
-                              <div class="wpr-tile">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Folder_icon.svg" alt="Photos Folder" class="wpr-icon" style="object-fit:cover;" />
-    <div class="wpr-title">View All Photos (OneDrive)</div>
-    <a href="https://cogentanalytics-my.sharepoint.com/:f:/p/eculp/ErrzXH0JoKNIhO_qgKgLvdMBwOeJc1i1Aez8T67mAls5Uw?e=SiT9rM" class="wpr-link" target="_blank">Open Folder</a>
-</div>r-icon" style="object-fit:cover;" /><div class="wpr-title">20250625_174255.jpg</div><a href="docs/Buckeye/Photos/20250625_174255.jpg" class="wpr-link" target="_blank">View/Download</a></div>
+                                <div class="wpr-tile">
+                                    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Folder_icon.svg" alt="Photos Folder" class="wpr-icon" />
+                                    <div class="wpr-title">Buckeye Photos Folder</div>
+                                    <a href="https://onedrive.live.com/your-shared-folder-link" class="wpr-link" target="_blank">View All Photos</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -342,13 +342,11 @@
             });
         });
 
-        // Modal functionality for Photos tab
+        // Modal functionality for Photos tab (no longer needed since only folder tile is shown)
         var modal = document.getElementById('image-modal');
         var modalImg = document.getElementById('modal-img');
         var modalClose = document.getElementById('modal-close');
-        // Only target photo tiles
         document.querySelectorAll('.accordion-content .wpr-grid .wpr-tile img').forEach(function(img) {
-            // Only add to images in Photos tab
             if (img.parentElement.parentElement.parentElement.previousElementSibling && img.parentElement.parentElement.parentElement.previousElementSibling.textContent.includes('Photos')) {
                 img.style.cursor = 'zoom-in';
                 img.addEventListener('click', function(e) {
@@ -370,3 +368,5 @@
         });
     });
     </script>
+</body>
+</html>
